--- a/index.html
+++ b/index.html
@@ -187,9 +187,8 @@
         <footer class="footer">
             <p class="footer__title">S.S.Mishra</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
             </div>
             <p class="footer__copy">&#169; Shiv_Mishra Code. All rigths reserved</p>
         </footer>
