my portfolio is modified

--- a/index.html
+++ b/index.html
@@ -156,14 +156,8 @@
                     <a href="https://shivshambhumishra.github.io/Calculator-1/" class="work__img">
                         <img src="./image/my-work-3.png" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="./image/my-work-4.jpeg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="./image/my-work-5.jpeg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="./image/my-work-6.jpeg" alt="">
+                    <a href="https://shivshambhumishra.github.io/My-Todo-List/" class="work__img">
+                        <img src="./image/my-work-4.png" alt="">
                     </a>
                 </div>
             </section>
@@ -187,8 +181,8 @@
         <footer class="footer">
             <p class="footer__title">S.S.Mishra</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-github' ></i></a>
+                <a href="https://www.linkedin.com/in/shiv-shambhu-mishra-1b7a26196/" class="footer__icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/ShivShambhuMishra" class="footer__icon"><i class='bx bxl-github' ></i></a>
             </div>
             <p class="footer__copy">&#169; Shiv_Mishra Code. All rigths reserved</p>
         </footer>
