modify my portfolio

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             </div>
             <p class="footer__copy">&#169; Shiv_Mishra Code. All rigths reserved</p>
         </footer>
+        <div class="cursor"></div>
 
 
         <!--===== SCROLL REVEAL =====-->
